--- a/features/api/templates/recs.html.j2
+++ b/features/api/templates/recs.html.j2
@@ -3,19 +3,103 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet/less" href="/static/styles/recs.less" type="text/css" />
+  <script src="/static/lib/less.js/3.7.1/less.min.js" ></script>
+  <link rel="shortcut icon" href="/static/images/spectro-CATH-a-32.png" />
 </head>
 
 <body>
 
-  <div>
-    <h1>
-      <a href="http://192.168.0.195:8000{{ request.full_path }}">local</a> |
-      <a href="http://35.230.68.91{{ request.full_path }}">remote</a>
-    </h1>
+  <div id="top-controls">
+    <form onsubmit="topControlsSubmit(event)">
+      <table>
+
+        <tr>
+          <td>host</td>
+          <td>species</td>
+          <td>limit</td>
+          <td>scale</td>
+          <td>thumb_s</td>
+          <td>audio_s</td>
+        </tr>
+
+        <tr>
+          <td><a class="control" href="//{{ go_local_remote_host() }}{{ request.full_path }}">{{ go_local_remote_text() }}</a></td>
+          <td><input type="text" class="control text species" value="{{ query_get('species') }}"
+            autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+          /></td>
+          <td><input type="text" class="control num limit" value="{{ query_get('limit', 10) }}" /></td>
+          <td><input type="text" class="control num scale" value="{{ query_get('scale', 2) }}" /></td>
+          <td><input type="text" class="control num thumb_s" value="{{ query_get('thumb_s', 1.5) }}" /></td>
+          <td><input type="text" class="control num audio_s" value="{{ query_get('audio_s', 10) }}" /></td>
+        </tr>
+
+      </table>
+
+      <!-- Add a (hidden) submit button so 'enter' works -->
+      <!-- <input type="submit" hidden /> --> <!-- Doesn't work on ios safari [https://stackoverflow.com/a/11282107/397334] -->
+      <input type="submit" style="visibility: hidden; position: absolute"/>
+
+    </form>
   </div>
 
   {% block body %}
   {% endblock %}
+
+  <script>
+
+    window.topControlsSubmit = (ev) => {
+      ev.preventDefault();
+      topControlsGo();
+    };
+
+    window.topControlsGo = () => {
+      const controls = document.getElementById('top-controls');
+      const query = new URLSearchParams(window.location.search);
+      [
+        'species',
+        'limit',
+        'scale',
+        'thumb_s',
+        'audio_s',
+      ].forEach(k => {
+        query.set(k, document.querySelector(`#top-controls .${k}`).value.trim());
+      });
+      window.location.search = query.toString();
+    };
+
+    window.isIOS = () => {
+      // https://stackoverflow.com/a/9039885/397334
+      return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+    };
+
+    document.addEventListener('DOMContentLoaded', ev => {
+
+      Array.from(document.querySelectorAll('input.control')).forEach(input => {
+
+        // Select input text on focus
+        if (isIOS()) {
+          input.onclick = ev => ev.target.setSelectionRange(0, 9999); // (ios)
+        } else {
+          input.onfocus = ev => ev.target.select(); // (chrome)
+        }
+
+        // Open numpad instead of keyboard (ios) [Disabled because numpad doesn't have an enter button]
+        // if (input.classList.contains('num')) input.pattern = '\\d*';
+
+        // Disable spellcheck (ios) [https://stackoverflow.com/a/254716/397334]
+        //  - This doesn't work, have to do in the html (above)
+        // input.spellcheck = false;
+        // input.autocomplete = "off";
+        // input.autocorrect = "off";
+        // input.autocapitalize = "off";
+
+      });
+
+    });
+
+
+  </script>
 
 </body>
 
