--- a/features/api/templates/recs_xc_similar.html.j2
+++ b/features/api/templates/recs_xc_similar.html.j2
@@ -12,6 +12,8 @@
     <td>scale</td>
     <td>audio_s</td>
     <td>thumb_s</td>
+    <td>dists</td>
+    <td>d_metric</td>
   </tr>
 
   <tr>
@@ -26,6 +28,8 @@
     <td><input type="text" data-arg="scale"    class="control num scale"    value="{{ req_query_get('scale', 2) }}" /></td>
     <td><input type="text" data-arg="audio_s"  class="control num audio_s"  value="{{ req_query_get('audio_s', 10) }}" /></td>
     <td><input type="text" data-arg="thumb_s"  class="control num thumb_s"  value="{{ req_query_get('thumb_s', 0) }}" /></td>
+    <td><input type="text" data-arg="dists"    class="control num dists"    value="{{ req_query_get('dists', 'fp') }}" /></td>
+    <td><input type="text" data-arg="d_metric" class="control num d_metric" value="{{ req_query_get('d_metric', 'l2') }}" /></td>
   </tr>
 
 {% endblock %}
