--- a/features/api/templates/recs_xc_similar.html.j2
+++ b/features/api/templates/recs_xc_similar.html.j2
@@ -7,7 +7,7 @@
     <td>xc_id</td>
     <td>quality</td>
     <td>n_sp</td>
-    <td>n_recs_r</td>
+    <td>sample_r</td>
     <td>n_total</td>
     <td>scale</td>
     <td>audio_s</td>
@@ -23,7 +23,7 @@
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
     <td><input type="text" data-arg="n_sp"      class="control num n_sp"      value="{{ req_query_get('n_sp',      3)    }}" /></td>
-    <td><input type="text" data-arg="n_recs_r"  class="control num n_recs_r"  value="{{ req_query_get('n_recs_r',  3)    }}" /></td>
+    <td><input type="text" data-arg="sample_r"  class="control num sample_r"  value="{{ req_query_get('sample_r',  3)    }}" /></td>
     <td><input type="text" data-arg="n_total"   class="control num n_total"   value="{{ req_query_get('n_total',   9)    }}" /></td>
     <td><input type="text" data-arg="scale"     class="control num scale"     value="{{ req_query_get('scale',     2)    }}" /></td>
     <td><input type="text" data-arg="audio_s"   class="control num audio_s"   value="{{ req_query_get('audio_s',   10)   }}" /></td>
