api/similar: Clean up sample_r; add more view fields; add n_sp_recs

--- a/features/api/static/styles/recs.less
+++ b/features/api/static/styles/recs.less
@@ -29,8 +29,8 @@
     border: 0;
 
     th, td {
-      border: 0px solid black;
-      border-width: 1px 0;
+      border: 0px solid lightgray;
+      border-width: 1px 1px;
 
       img {
         display: block; // Else 4px extra height from display:inline
@@ -48,7 +48,7 @@ table {
   tr {
     th, td {
       padding: 0 5px;
-      text-align: center;
+      text-align: left;
       white-space: nowrap;
     }
   }
