search_recs: float63 -> float32; feat/f_f/f_p -> feat/f_preds

--- a/features/api/templates/recs_xc_similar.html.j2
+++ b/features/api/templates/recs_xc_similar.html.j2
@@ -12,7 +12,7 @@
     <td>scale</td>
     <td>audio_s</td>
     <td>thumb_s</td>
-    <td>d_metrics</td>
+    <td>dists</td>
   </tr>
 
   <tr>
@@ -27,7 +27,7 @@
     <td><input type="text" data-arg="scale"     class="control num scale"     value="{{ req_query_get('scale',     2)    }}" /></td>
     <td><input type="text" data-arg="audio_s"   class="control num audio_s"   value="{{ req_query_get('audio_s',   10)   }}" /></td>
     <td><input type="text" data-arg="thumb_s"   class="control num thumb_s"   value="{{ req_query_get('thumb_s',   0)    }}" /></td>
-    <td><input type="text" data-arg="d_metrics" class="control num d_metrics" value="{{ req_query_get('d_metrics', '2c') }}" /></td>
+    <td><input type="text" data-arg="dists"     class="control num dists"     value="{{ req_query_get('dists',     '2c') }}" /></td>
   </tr>
 
 {% endblock %}
