--- a/features/api/templates/recs_xc_similar.html.j2
+++ b/features/api/templates/recs_xc_similar.html.j2
@@ -10,7 +10,6 @@
     <td>n_total</td>
     <td>n_sp_recs</td>
     <td>scale</td>
-    <td>audio_s</td>
     <td>dists</td>
   </tr>
 
@@ -20,11 +19,10 @@
     <td><input type="text" data-arg="quality"   class="control text quality"  value="{{ req_query_get('quality',   'ab') }}"
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
-    <td><input type="text" data-arg="n_sp"      class="control num n_sp"      value="{{ req_query_get('n_sp',      20)   }}" /></td>
+    <td><input type="text" data-arg="n_sp"      class="control num n_sp"      value="{{ req_query_get('n_sp',      '')   }}" /></td>
     <td><input type="text" data-arg="n_total"   class="control num n_total"   value="{{ req_query_get('n_total',   20)   }}" /></td>
     <td><input type="text" data-arg="n_sp_recs" class="control num n_sp_recs" value="{{ req_query_get('n_sp_recs', '')   }}" /></td>
-    <td><input type="text" data-arg="scale"     class="control num scale"     value="{{ req_query_get('scale',     1)    }}" /></td>
-    <td><input type="text" data-arg="audio_s"   class="control num audio_s"   value="{{ req_query_get('audio_s',   10)   }}" /></td>
+    <td><input type="text" data-arg="scale"     class="control num scale"     value="{{ req_query_get('scale',     2)    }}" /></td>
     <td><input type="text" data-arg="dists"     class="control num dists"     value="{{ req_query_get('dists',     '2c') }}" /></td>
   </tr>
 
