api: Misc fixes

--- a/features/api/templates/recs_xc_similar.html.j2
+++ b/features/api/templates/recs_xc_similar.html.j2
@@ -15,7 +15,7 @@
 
   <tr>
     <td><a class="control" href="//{{ req_switch_host_host() }}{{ request.full_path }}">{{ req_switch_host_text() }}</a></td>
-    <td><input type="text" data-arg="xc_id"     class="control num xc_id"     value="{{ req_query_get('xc_id',     5)    }}" /></td>
+    <td><input type="text" data-arg="xc_id"     class="control num xc_id"     value="{{ req_query_get('xc_id',     '')   }}" /></td>
     <td><input type="text" data-arg="quality"   class="control text quality"  value="{{ req_query_get('quality',   'ab') }}"
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
