/species: Add clustering

--- a/features/api/templates/recs_xc_similar.html.j2
+++ b/features/api/templates/recs_xc_similar.html.j2
@@ -21,7 +21,9 @@
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
     <td><input type="text" data-arg="n_sp"      class="control num  n_sp"      value="{{ req_query_get('n_sp',      '')   }}" /></td>
-    <td><input type="text" data-arg="group_sp"  class="control text group_sp"  value="{{ req_query_get('group_sp',  'y')  }}" /></td>
+    <td><input type="text" data-arg="group_sp"  class="control text group_sp"  value="{{ req_query_get('group_sp',  'y')  }}"
+      autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+    /></td>
     <td><input type="text" data-arg="n_sp_recs" class="control num  n_sp_recs" value="{{ req_query_get('n_sp_recs', 3)    }}" /></td>
     <td><input type="text" data-arg="n_total"   class="control num  n_total"   value="{{ req_query_get('n_total',   30)   }}" /></td>
     <td><input type="text" data-arg="scale"     class="control num  scale"     value="{{ req_query_get('scale',     2)    }}" /></td>
