--- a/features/api/static/styles/recs.less
+++ b/features/api/static/styles/recs.less
@@ -35,8 +35,8 @@ table {
     outline: none;
   }
 
+  input.text          { width: 2ex; }
   input.text.species  { width: 5ex; }
-  input.text.quality  { width: 2ex; }
   input.text.group_sp { width: 1ex; }
   input.num           { width: 2ex; }
   input.num.xc_id     { width: 6ex; }
