--- a/features/api/templates/recs_xc_species.html.j2
+++ b/features/api/templates/recs_xc_species.html.j2
@@ -15,19 +15,19 @@
 
   <tr>
     <td><a class="control" href="//{{ req_switch_host_host() }}{{ request.full_path }}">{{ req_switch_host_text() }}</a></td>
-    <td><input type="text" data-arg="species"   class="control text species"  value="{{ req_query_get('species',   '')   }}"
+    <td><input type="text" data-arg="species"   class="control text species"   value="{{ req_query_get('species',   '') }}"
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
-    <td><input type="text" data-arg="quality"   class="control text quality"  value="{{ req_query_get('quality',   'ab') }}"
+    <td><input type="text" data-arg="quality"   class="control text quality"   value="{{ req_query_get('quality',   '') }}"
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
-    <td><input type="text" data-arg="cluster"   class="control text cluster"  value="{{ req_query_get('cluster',   'k')  }}"
+    <td><input type="text" data-arg="cluster"   class="control text cluster"   value="{{ req_query_get('cluster',   '') }}"
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
-    <td><input type="text" data-arg="cluster_k" class="control num cluster_k" value="{{ req_query_get('cluster_k', 5)    }}" /></td>
-    <td><input type="text" data-arg="n_recs"    class="control num n_recs"    value="{{ req_query_get('n_recs',    50)   }}" /></td>
-    <td><input type="text" data-arg="scale"     class="control num scale"     value="{{ req_query_get('scale',     2)    }}" /></td>
-    <td><input type="text" data-arg="dists"     class="control num dists"     value="{{ req_query_get('dists',     '2c') }}" /></td>
+    <td><input type="text" data-arg="cluster_k" class="control num  cluster_k" value="{{ req_query_get('cluster_k', '') }}" /></td>
+    <td><input type="text" data-arg="n_recs"    class="control num  n_recs"    value="{{ req_query_get('n_recs',    '') }}" /></td>
+    <td><input type="text" data-arg="scale"     class="control num  scale"     value="{{ req_query_get('scale',     '') }}" /></td>
+    <td><input type="text" data-arg="dists"     class="control num  dists"     value="{{ req_query_get('dists',     '') }}" /></td>
   </tr>
 
 {% endblock %}
