api: UX fixes + tweaks

--- a/features/api/static/styles/recs.less
+++ b/features/api/static/styles/recs.less
@@ -119,6 +119,10 @@ table {
         display: block; // Else 4px extra height from display:inline
       }
 
+      .labeled-species {
+        text-align: right;
+      }
+
     }
 
   }
