--- a/features/api/templates/recs_xc_species.html.j2
+++ b/features/api/templates/recs_xc_species.html.j2
@@ -11,6 +11,7 @@
     <td>n_recs</td>
     <td>scale</td>
     <td>dists</td>
+    <td>feats</td>
   </tr>
 
   <tr>
@@ -28,6 +29,7 @@
     <td><input type="text" data-arg="n_recs"    class="control num  n_recs"    value="{{ req_query_get('n_recs',    '') }}" /></td>
     <td><input type="text" data-arg="scale"     class="control num  scale"     value="{{ req_query_get('scale',     '') }}" /></td>
     <td><input type="text" data-arg="dists"     class="control num  dists"     value="{{ req_query_get('dists',     '') }}" /></td>
+    <td><input type="text" data-arg="feats"     class="control num  feats"     value="{{ req_query_get('feats',     '') }}" /></td>
   </tr>
 
 {% endblock %}
