UX: zoom buttons + dev toggle

--- a/features/api/static/styles/recs.less
+++ b/features/api/static/styles/recs.less
@@ -93,6 +93,9 @@ table {
     background: #6d6d6d;
     color: white;
   }
+  .control.dev {
+    background: inherit;
+  }
 
   input {
     border: 0;
