--- a/features/api/templates/recs_xc_species.html.j2
+++ b/features/api/templates/recs_xc_species.html.j2
@@ -3,33 +3,43 @@
 {% block controls_table %}
 
   <tr>
-    <td>host</td>
     <td>species</td>
     <td>quality</td>
-    <td>cluster</td>
-    <td>cluster_k</td>
+    <td></td>
+    <td></td>
     <td>n_recs</td>
-    <td>scale</td>
-    <td>dists</td>
-    <td>feats</td>
+    {% if is_dev() %}
+      <td>scale</td>
+      <td>cluster</td>
+      <td>cluster_k</td>
+      <td>dists</td>
+      <td>feats</td>
+      <td>host</td>
+    {% endif %}
+    <td></td>
   </tr>
 
   <tr>
-    <td><a class="control" href="//{{ req_switch_host_host() }}{{ request.full_path }}">{{ req_switch_host_text() }}</a></td>
     <td><input type="text" data-arg="species"   class="control text species"   value="{{ req_query_get('species',   '') }}"
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
     <td><input type="text" data-arg="quality"   class="control text quality"   value="{{ req_query_get('quality',   '') }}"
       autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
     /></td>
-    <td><input type="text" data-arg="cluster"   class="control text cluster"   value="{{ req_query_get('cluster',   '') }}"
-      autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
-    /></td>
-    <td><input type="text" data-arg="cluster_k" class="control num  cluster_k" value="{{ req_query_get('cluster_k', '') }}" /></td>
+    <td><a class="control zoom" href="{{ req_path_with_zoom(-1) }}">–</a></td>
+    <td><a class="control zoom" href="{{ req_path_with_zoom(+1) }}">+</a></td>
     <td><input type="text" data-arg="n_recs"    class="control num  n_recs"    value="{{ req_query_get('n_recs',    '') }}" /></td>
-    <td><input type="text" data-arg="scale"     class="control num  scale"     value="{{ req_query_get('scale',     '') }}" /></td>
-    <td><input type="text" data-arg="dists"     class="control num  dists"     value="{{ req_query_get('dists',     '') }}" /></td>
-    <td><input type="text" data-arg="feats"     class="control num  feats"     value="{{ req_query_get('feats',     '') }}" /></td>
+    {% if is_dev() %}
+      <td><input type="text" data-arg="scale"     class="control num  scale"     value="{{ req_query_get('scale',     '') }}" /></td>
+      <td><input type="text" data-arg="cluster"   class="control text cluster"   value="{{ req_query_get('cluster',   '') }}"
+        autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+      /></td>
+      <td><input type="text" data-arg="cluster_k" class="control num  cluster_k" value="{{ req_query_get('cluster_k', '') }}" /></td>
+      <td><input type="text" data-arg="dists"     class="control num  dists"     value="{{ req_query_get('dists',     '') }}" /></td>
+      <td><input type="text" data-arg="feats"     class="control num  feats"     value="{{ req_query_get('feats',     '') }}" /></td>
+      <td><a class="control host" href="//{{ req_switch_host_host() }}{{ request.full_path }}">{{ req_switch_host_text() }}</a></td>
+    {% endif %}
+    <td><a class="control dev"  href="{{ req_path_with_toggle_dev() }}">🎛</a></td> <!-- 🎛🎚🔛💡⛄☃️ -->
   </tr>
 
 {% endblock %}
