--- a/features/api/templates/recs.html.j2
+++ b/features/api/templates/recs.html.j2
@@ -21,8 +21,8 @@
 
       </table>
 
-      <!-- Add a (hidden) submit button so 'enter' works -->
-      <!-- <input type="submit" hidden /> --> <!-- Doesn't work on ios safari [https://stackoverflow.com/a/11282107/397334] -->
+      {# Add a (hidden) submit button so 'enter' works #}
+      {# <input type="submit" hidden /> #} {# Doesn't work on ios safari [https://stackoverflow.com/a/11282107/397334] #}
       <input type="submit" style="visibility: hidden; position: absolute"/>
 
     </form>
