model/notebooks/talk_ggas_mb_20191115/

--- a/model/notebooks/talk_ggas_mb_20191115/custom.css
+++ b/model/notebooks/talk_ggas_mb_20191115/custom.css
@@ -28,6 +28,7 @@ section.present::-webkit-scrollbar {
 }
 section.present {
   margin-top: 0 !important;
+  height: inherit !important;
 }
 .reveal ul ul,
 .reveal ul ol,
